Fix Portfolio images overflowing outside parent when window is shrunk

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -319,35 +319,49 @@
             align-items:center;}
 
         .portfolio div {
-            width: 100%;
+            display: flex;
             flex-direction: column;
+            width: 100%;
             margin: 0px;
-            padding: 0px;}
+            padding: 0px;
+            background: transparent}
 
         .portfolio div:first-child {
             margin-top: 0px;}
             
-        .portfolio span {
-            column-count: 3;
-            column-gap: 0px;
+        .portfolio div > div {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            background: transparent;
+            width: 100%;
             margin: 0px;
             padding: 0px;
-            padding-top: 10px;}
+        }
+
+        .portfolio span {
+            flex: 33%;
+            max-width: 33%;
+            background-color: transparent;
+            margin: 0px;
+            margin-bottom: 5px;
+            padding: 0px;
+            }
 
         .portfolio img {
-            width: 350px;
-            display: block;
             margin: 0px;
-            margin-left: auto;
-            margin-right: auto;
             padding: 0px;
-            padding-bottom: 10px;}
+            border: 1px solid #555;
+            width: 100%;
+            height: 100%;
+        }
 
         .portfolio h2 {
-            background-color: #555;
             width: 100%;
+            background-color: #555;
             text-align: center;
-            margin-bottom: 0px;}
+            margin-bottom: 5px;}
 
     /* Case Studies */
     /* %%%%%%%%%%%%%%%%%%%%%% */
@@ -370,7 +384,7 @@
             object-fit:cover;
             width: 250px;
             margin: 20px;
-            border: 2px solid #555;}
+            border: 1px solid #555;}
 
         .case_studies p {
             margin: 20px 20px 20px 0px;}
